--- a/package.json
+++ b/package.json
@@ -2,7 +2,19 @@
   "name": "OTOT-B",
   "version": "1.0.0",
   "description": "repository for web application task",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "Aditya Banerjee <aditya_banerjee@icloud.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "scripts": {
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
+  },
+  "type": "module"
 }
