add root jest test

--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "mongoose": "^6.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.0.3",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.2.4"
   },
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "jest"
   }
 }
