--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - "14"
+env:
+  - DB_URL=mongodb://localhost/test
 script:
   - echo "START BUILD"
   - echo "installing dependencies..."
