--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "14"
 env:
-  - DB_URL=mongodb://localhost/test
+  - DB_URL="mongodb://localhost/test"
 script:
   - echo "START BUILD"
   - echo "installing dependencies..."
