--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ script:
 - yarn
 - echo "running tests..."
 - jest
+before_deploy:
+  - rvm $(travis_internal_ruby) --fuzzy do ruby -S gem install faraday -v 1.8.0
 deploy:
   provider: heroku
   app: adidoesnt-otot-b
